# agentic_rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
agents/agent_core/: README.md  pyproject.toml
agents/agent_core/src/agent_core/: __init__.py  context.py  registry.py  settings.py
agents/analytics_agent/: README.md  pyproject.toml
agents/analytics_agent/src/analytics_agent/: __init__.py  agent.py  cli.py
agents/datasets_agent/: README.md  pyproject.toml
agents/datasets_agent/src/datasets_agent/: __init__.py  agent.py  cli.py
agents/rag_agent/: README.md  pyproject.toml
agents/rag_agent/src/rag_agent/: __init__.py  agent.py  cli.py
app/: main.py
app/core/: config.py
app/services/: rag.py  schemas.py
app_api/: README.md  pyproject.toml
app_api/src/app_api/: app.py  main.py
app_api/src/app_api/configs/: local.yaml
app_api/src/app_api/core/: config.py  settings.py
app_api/src/app_api/services/: rag.py
app_api/tests/: __init__.py  conftest.py  test_api.py
app_template/: README.md  pyproject.toml
app_template/src/app_template/: __init__.py  app.py
app_template/src/app_template/configs/: local.yaml
app_template/tests/: test_app_template.py
catalog/: README.md  pyproject.toml
catalog/deploy/: Dockerfile  entrypoint.sh
catalog/deploy/configs/: nomad.yaml
catalog/src/catalog/: __init__.py  app.py
catalog/src/catalog/configs/: local.yaml
catalog/tests/: test_catalog.py
core/: README.md  pyproject.toml
core/src/core/: __init__.py  cmd_utils.py  context.py  logging.py  registry.py  settings.py  telemetry.py
core/tests/: test_settings_loader.py
data_gen/: README.md  pyproject.toml
data_gen/src/data_gen/: __init__.py  config.py  export.py  generators.py
datasets/: README.md  pyproject.toml
datasets/deploy/: Dockerfile  entrypoint.sh
datasets/deploy/configs/: nomad.yaml
datasets/src/datasets/: FsStore.py  __init__.py  app.py  schemas.py
datasets/src/datasets/configs/: local.yaml
datasets/tests/: test_datasets_service.py  test_fs_store.py
db/: README.md  pyproject.toml
db/src/db/: __init__.py  connection.py  migrations.py  storage.py
deploy/: README-dev.md  README.md
deploy/nomad/: agentic-rag.nomad.hcl  traefik.nomad.hcl
deploy/scripts/: build-images.sh
documents/: README.md  pyproject.toml
documents/src/documents/: __init__.py  app.py  dependencies.py  logging_setup.py  schemas.py  telemetry.py
documents/src/documents/configs/: local.yaml
documents/src/documents/routers/: __init__.py  indexing.py  search.py
documents/src/documents/services/: docling_pdf_pipeline.py  indexing_service.py  pdf_ingestion.py  settings.py
documents/tests/: conftest.py  test_routers.py
eval/: README.md  pyproject.toml
eval/src/eval_suite/: __init__.py  metrics.py  reports.py  runner.py
knowledge_base/: README.md  pyproject.toml
knowledge_base/src/knowledge_base/: __init__.py  ingest.py
src/agent_rag/: main.py  schemas.py
src/agent_rag/core/: config.py
src/agent_rag/services/: rag.py
