[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "documents"
version = "0.1.0"
description = "Documents processing and search service skeleton"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "llama-index-core>=0.14.5",
    "llama-index-readers-docling>=0.4.1",
    "llama-index-node-parser-docling>=0.4.1",
    "llama-index-readers-file>=0.5.4",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-llms-openai>=0.6.5",
    "docling>=2.57.0",
    "pillow>=10.0.0",

    # HF embedding speedups libraries
    "torch>=2.9.0",
    "accelerate>=0.34.2",
    "sentence-transformers>=5.1.1",

    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    "core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6.9",
]

[tool.uv]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["dist", "build", ".venv"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "PGH",
]
ignore = [
    "E203",
]

[tool.ruff.lint.isort]
known-first-party = ["documents"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false

[project.scripts]
serve = "documents.app:serve"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
core = { path = "../core" }
